--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 
 # Playwright
+tests/homeWork/conduitSite_tests/login-data.json/
 node_modules/
 /test-results/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
